Fix display name formatting in buildAndPushDockerImage.yml

--- a/buildAndPushDockerImage.yml
+++ b/buildAndPushDockerImage.yml
@@ -75,4 +75,4 @@ jobs:
           --file ${{ parameters.dockerFile }} \
           $(System.DefaultWorkingDirectory)/target
       fi
-    displayName: 'Build and Push Docker image on ${{ parameters.dockerRegistry }}''
+    displayName: 'Build and Push Docker image on ${{ parameters.dockerRegistry }}'
