--- a/build.yml
+++ b/build.yml
@@ -3,7 +3,11 @@
 
 parameters:
   # Default values
-- name : dotNetCoreVersion
+- name: preBuildSteps
+  type: stepList
+  default: []
+  displayName: 'Run pre-build steps before the build actually starts' 
+- name: dotNetCoreVersion
   type: string
   default: '3.1.102' # can also be use with wildcards:  latest minor version of 3. , use '3.x'
   displayName: 'dotnet core version'
@@ -106,6 +110,9 @@ jobs:
 
   - checkout: self
     submodules: ${{ parameters.checkoutSubmodules }}
+
+  # Run pre-build steps
+  - ${{ parameters.preBuildSteps }}
 
   ## retrieve the version suffix from the props file and set it as a variable
   - powershell: |
