Fix syntax error in condition for package version update in updatePackageVersion.yml

--- a/updatePackageVersion.yml
+++ b/updatePackageVersion.yml
@@ -75,4 +75,4 @@ steps:
 
     Get-Content -path $xmlFilePath
   displayName: ${{ parameters.displayName }}
-  condition: ne('${{ parameters.packageVersion }}', '') # Only update the version if a version is provided
+  condition: ${{ ne(parameters.packageVersion, '' }} # Only update the version if a version is provided
