Refactor updatePackageVersion.yml to improve package version retrieval and XML update logic

--- a/updatePackageVersion.yml
+++ b/updatePackageVersion.yml
@@ -32,47 +32,47 @@ steps:
     displayName: 'NuGet Authenticate'
     inputs:
       nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
+      
+- ${{ if ne(parameters.packageVersion, '') }}:
+  - powershell: |
+      Write-Host "Input Package version: [${{ parameters.packageVersion }}]"
 
-- powershell: |
-    Write-Host "Input Package version: [${{ parameters.packageVersion }}]"
+      Write-Host "Retrieve the latest version (including pre-release) of the package ${{ parameters.packageName }} matching the expression ${{ parameters.packageVersion }}"
+      $packageVersion = (dotnet package search ${{ parameters.packageName }} --prerelease --source https://nuget.pkg.github.com/FirelyTeam/index.json --format json --exact-match --verbosity minimal | ConvertFrom-Json).SearchResult[0].Packages | 
+        Where-Object { $_.Version -match "^${{ parameters.packageVersion }}" } | 
+        Sort-Object { 
+          $version = $_.Version -replace "[^0-9\.]", "" 
+          [System.Version]$version 
+        }, { $_.Version } -Descending | 
+        Select-Object -First 1 -ExpandProperty Version
 
-    Write-Host "Retrieve the latest version (including pre-release) of the package ${{ parameters.packageName }} matching the expression ${{ parameters.packageVersion }}"
-    $packageVersion = (dotnet package search ${{ parameters.packageName }} --prerelease --source https://nuget.pkg.github.com/FirelyTeam/index.json --format json --exact-match --verbosity minimal | ConvertFrom-Json).SearchResult[0].Packages | 
-      Where-Object { $_.Version -match "^${{ parameters.packageVersion }}" } | 
-      Sort-Object { 
-        $version = $_.Version -replace "[^0-9\.]", "" 
-        [System.Version]$version 
-      }, { $_.Version } -Descending | 
-      Select-Object -First 1 -ExpandProperty Version
+      $xmlFilePath = "${{ parameters.propertyFilePath }}"
 
-    $xmlFilePath = "${{ parameters.propertyFilePath }}"
+      # check if $xmlFilePath exists
+      if (-not (Test-Path $xmlFilePath)) {
+          Write-Host "Property file not found: $xmlFilePath"
+          Exit 1
+      }
 
-    # check if $xmlFilePath exists
-    if (-not (Test-Path $xmlFilePath)) {
-        Write-Host "Property file not found: $xmlFilePath"
-        Exit 1
-    }
+      # Load the XML
+      [xml]$xml = Get-Content $xmlFilePath
 
-    # Load the XML
-    [xml]$xml = Get-Content $xmlFilePath
+      # Define the XML namespace (since the XML file has a namespace)
+      $namespace = New-Object Xml.XmlNamespaceManager($xml.NameTable)
+      $namespace.AddNamespace("msb", "http://schemas.microsoft.com/developer/msbuild/2003")
 
-    # Define the XML namespace (since the XML file has a namespace)
-    $namespace = New-Object Xml.XmlNamespaceManager($xml.NameTable)
-    $namespace.AddNamespace("msb", "http://schemas.microsoft.com/developer/msbuild/2003")
+      # Find the package propery element and update it
+      $packageVersionNode = $xml.SelectSingleNode("//msb:PropertyGroup/msb:${{ parameters.packageProperty }}", $namespace)
+      if ($null -ne $packageVersionNode) {
+          $packageVersionNode.InnerText = $packageVersion
+          # Save the updated XML back to the file
+          $xml.Save($xmlFilePath)
+          Write-Host "Package version updated to ${packageVersion}:"
+      } 
+      else {
+          Write-Host "${{ parameters.packageProperty }} element not found!"
+          Exit 1
+      }
 
-    # Find the package propery element and update it
-    $packageVersionNode = $xml.SelectSingleNode("//msb:PropertyGroup/msb:${{ parameters.packageProperty }}", $namespace)
-    if ($null -ne $packageVersionNode) {
-        $packageVersionNode.InnerText = $packageVersion
-        # Save the updated XML back to the file
-        $xml.Save($xmlFilePath)
-        Write-Host "Package version updated to ${packageVersion}:"
-    } 
-    else {
-        Write-Host "${{ parameters.packageProperty }} element not found!"
-        Exit 1
-    }
-
-    Get-Content -path $xmlFilePath
-  displayName: ${{ parameters.displayName }}
-  condition: ${{ ne(parameters.packageVersion, '') }} # Only update the version if a version is provided
+      Get-Content -path $xmlFilePath
+    displayName: ${{ parameters.displayName }}
