--- a/updatePackageVersion.yml
+++ b/updatePackageVersion.yml
@@ -27,52 +27,55 @@ parameters:
     default: 'Update Package version'
 
 steps:
-- ${{ if ne(parameters.nuGetServiceConnections, '') }}:
-  - task: NuGetAuthenticate@1
-    displayName: 'NuGet Authenticate'
-    inputs:
-      nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
-      
-- ${{ if ne(parameters.packageVersion, '') }}:
-  - powershell: |
-      Write-Host "Input Package version: [${{ parameters.packageVersion }}]"
+- task: NuGetAuthenticate@1
+  displayName: 'NuGet Authenticate'
+  inputs:
+    nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
 
-      Write-Host "Retrieve the latest version (including pre-release) of the package ${{ parameters.packageName }} matching the expression ${{ parameters.packageVersion }}"
-      $packageVersion = (dotnet package search ${{ parameters.packageName }} --prerelease --source https://nuget.pkg.github.com/FirelyTeam/index.json --format json --exact-match --verbosity minimal | ConvertFrom-Json).SearchResult[0].Packages | 
-        Where-Object { $_.Version -match "^${{ parameters.packageVersion }}" } | 
-        Sort-Object { 
-          $version = $_.Version -replace "[^0-9\.]", "" 
-          [System.Version]$version 
-        }, { $_.Version } -Descending | 
-        Select-Object -First 1 -ExpandProperty Version
+- powershell: |
+    Write-Host "Input Package version: [${{ parameters.packageVersion }}]"
+    if ( ${{ parameters.packageVersion }} -eq "" ) 
+    {
+      Write-Host "No package version specified, keeping the existing version in the property file."
+      Exit 0
+    }
 
-      $xmlFilePath = "${{ parameters.propertyFilePath }}"
+    Write-Host "Retrieve the latest version (including pre-release) of the package ${{ parameters.packageName }} matching the expression ${{ parameters.packageVersion }}"
+    $packageVersion = (dotnet package search ${{ parameters.packageName }} --prerelease --source https://nuget.pkg.github.com/FirelyTeam/index.json --format json --exact-match --verbosity minimal | ConvertFrom-Json).SearchResult[0].Packages | 
+      Where-Object { $_.Version -match "^${{ parameters.packageVersion }}" } | 
+      Sort-Object { 
+        $version = $_.Version -replace "[^0-9\.]", "" 
+        [System.Version]$version 
+      }, { $_.Version } -Descending | 
+      Select-Object -First 1 -ExpandProperty Version
 
-      # check if $xmlFilePath exists
-      if (-not (Test-Path $xmlFilePath)) {
-          Write-Host "Property file not found: $xmlFilePath"
-          Exit 1
-      }
+    $xmlFilePath = "${{ parameters.propertyFilePath }}"
 
-      # Load the XML
-      [xml]$xml = Get-Content $xmlFilePath
+    # check if $xmlFilePath exists
+    if (-not (Test-Path $xmlFilePath)) {
+        Write-Host "Property file not found: $xmlFilePath"
+        Exit 1
+    }
 
-      # Define the XML namespace (since the XML file has a namespace)
-      $namespace = New-Object Xml.XmlNamespaceManager($xml.NameTable)
-      $namespace.AddNamespace("msb", "http://schemas.microsoft.com/developer/msbuild/2003")
+    # Load the XML
+    [xml]$xml = Get-Content $xmlFilePath
 
-      # Find the package propery element and update it
-      $packageVersionNode = $xml.SelectSingleNode("//msb:PropertyGroup/msb:${{ parameters.packageProperty }}", $namespace)
-      if ($null -ne $packageVersionNode) {
-          $packageVersionNode.InnerText = $packageVersion
-          # Save the updated XML back to the file
-          $xml.Save($xmlFilePath)
-          Write-Host "Package version updated to ${packageVersion}:"
-      } 
-      else {
-          Write-Host "${{ parameters.packageProperty }} element not found!"
-          Exit 1
-      }
+    # Define the XML namespace (since the XML file has a namespace)
+    $namespace = New-Object Xml.XmlNamespaceManager($xml.NameTable)
+    $namespace.AddNamespace("msb", "http://schemas.microsoft.com/developer/msbuild/2003")
 
-      Get-Content -path $xmlFilePath
-    displayName: ${{ parameters.displayName }}
+    # Find the package propery element and update it
+    $packageVersionNode = $xml.SelectSingleNode("//msb:PropertyGroup/msb:${{ parameters.packageProperty }}", $namespace)
+    if ($null -ne $packageVersionNode) {
+        $packageVersionNode.InnerText = $packageVersion
+        # Save the updated XML back to the file
+        $xml.Save($xmlFilePath)
+        Write-Host "Package version updated to ${packageVersion}:"
+    } 
+    else {
+        Write-Host "${{ parameters.packageProperty }} element not found!"
+        Exit 1
+    }
+
+    Get-Content -path $xmlFilePath
+  displayName: ${{ parameters.displayName }}
