--- a/deployKubernetes.yml
+++ b/deployKubernetes.yml
@@ -67,6 +67,13 @@ parameters:
 - name: releaseName
   type: string
   displayName: 'Name of the release used by Helm'
+- name: checkoutSteps
+  type: StepList
+  default: 
+  - checkout: self
+    path: localRepo
+    displayName: 'Checkout local repository'
+  displayName: 'Checkout steps for the local repository. Use "none" if you want to skip the checkout of the local repository.'
 
 jobs:
 - deployment: ${{ parameters.deploymentJobName }}
@@ -77,9 +84,8 @@ jobs:
       deploy:
         steps:
         - download: none
-        - checkout: self
-          path: localRepo
-          displayName: 'Checkout local repository'
+        - ${{ each step in parameters.checkoutSteps }}:
+          - ${{ step }}
         - checkout: ${{ parameters.infraRepositoryName }}
           path: infraRepo
           displayName: 'Checkout infrastructure repository'
