Fix parameter type casing for checkoutSteps in deployKubernetes.yml

--- a/deployKubernetes.yml
+++ b/deployKubernetes.yml
@@ -68,7 +68,7 @@ parameters:
   type: string
   displayName: 'Name of the release used by Helm'
 - name: checkoutSteps
-  type: StepList
+  type: stepList
   default: 
   - checkout: self
     path: localRepo
