change from error to host

--- a/check-for-prerelease-packages.yml
+++ b/check-for-prerelease-packages.yml
@@ -8,11 +8,11 @@ steps:
             $packageRefs = $content | Select-String -Pattern '<PackageReference.*Version=".*-.*"'
             
             if ($packageRefs) {
-                Write-Error "Prerelease packages found in $($project.Name)"
+                Write-Host "Prerelease packages found in $($project.Name)"
                 try{
-                    $packageRefs | ForEach-Object { Write-Error $_.Line.Trim() }
+                    $packageRefs | ForEach-Object { Write-Host $_.Line.Trim() }
                 } catch {
-                    Write-Error "Error processing package references in $($project.Name): $_"
+                    Write-Host "Error processing package references in $($project.Name): $_"
                 }
                 $hasPrerelease = $true
             }
