--- a/scanKubernetesCluster.yml
+++ b/scanKubernetesCluster.yml
@@ -50,8 +50,8 @@ jobs:
     displayName: 'Install Kubescape using apt'
 
   - script: |
-      echo "Running Kubescape scan with arguments: ${{ parameters.scanArguments }}"
-      kubescape scan --output ${{ parameters.outputFormat }} --output-file ${{ parameters.outputFile }} ${{ parameters.scanArguments }}
+      echo "Running Kubescape scan with arguments: --output ${{ parameters.outputFormat }} --output-file ${{ parameters.outputFile }}"
+      kubescape scan --output ${{ parameters.outputFormat }} --output-file ${{ parameters.outputFile }}
     displayName: 'Run Kubescape scan'
 
   - publish: ${{ parameters.outputFile }}
