--- a/scanKubernetesCluster.yml
+++ b/scanKubernetesCluster.yml
@@ -19,9 +19,9 @@ parameters:
     displayName: 'Name of the artifact to publish'
 
 jobs:
-- job: scan  
+- job: scan
   displayName: Scan Kubernetes Cluster
-  pool: 
+  pool:
     vmImage: 'ubuntu-latest'
   steps:
   - script: |
@@ -42,9 +42,12 @@ jobs:
 
   - script: |
       echo "Adding Kubescape APT repository..."
-      sudo add-apt-repository ppa:kubescape/kubescape
+      if ! sudo add-apt-repository -y ppa:kubescape/kubescape; then
+        echo "Failed to add Kubescape APT repository." >&2
+        exit 1
+      fi
       sudo apt update
-      sudo apt install kubescape
+      sudo apt install -y kubescape
       echo "Kubescape version:"
       kubescape version
     displayName: 'Install Kubescape using apt'
