Add option to build solution not located in the repository root

--- a/build.yml
+++ b/build.yml
@@ -170,6 +170,7 @@ jobs:
     parameters:
       nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
       nuGetSources: ${{ parameters.nuGetSources }}
+      solutionFile: ${{ parameters.buildSolutionFile }}
       
   - script: dotnet build ${{ parameters.buildSolutionFile }} --configuration $(buildConfiguration) --no-restore /p:ContinuousIntegrationBuild=true
     displayName: 'dotnet build $(buildConfiguration)'
