--- a/restore.yml
+++ b/restore.yml
@@ -17,10 +17,11 @@ steps:
       inputs:
         nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
 
-  - script: |
-      if [ -n "${{ parameters.solutionFile }}" ]; then
+  - powershell: |
+      if (${{ parameters.solutionFile }}) {
         dotnet restore "${{ parameters.solutionFile }}" --source https://api.nuget.org/v3/index.json ${{ parameters.nuGetSources }}
-      else
+      }
+      else {
         dotnet restore --source https://api.nuget.org/v3/index.json ${{ parameters.nuGetSources }}
-      fi
+      }
     displayName: 'dotnet restore'
