--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -50,11 +50,15 @@ jobs:
     inputs:
       script: |
         # Install the Docker Scout CLI
+        echo "Installing Docker Scout CLI"
+        echo "DOCKER_HOME=${DOCKER_HOME}"
+        echo "DOCKER_CONFIG=${DOCKER_CONFIG}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
         # Get a CVE report for the built image and fail the pipeline when critical or high CVEs are detected
         docker scout cves --help
         echo "docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium"
-        docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium
+        # docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium
+        docker scout cves alpine:3.20 --exit-code --only-severity critical,high,medium
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in image"
           exit 1
