--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -38,12 +38,12 @@ jobs:
     inputs:
       command: login
       containerRegistry: ${{ parameters.dockerRegistryConnection }}
-  - task: Bash@3
-    displayName: 'Pull Docker image from private registry'
-    inputs:
-      targetType: inline
-      script: |
-        docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
+  #- task: Bash@3
+  #  displayName: 'Pull Docker image from private registry'
+  #  inputs:
+  #    targetType: inline
+  #    script: |
+  #      docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
 
   - task: CmdLine@2
     displayName: Run docker scout on image
