--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -51,8 +51,9 @@ jobs:
       script: |
         # Install the Docker Scout CLI
         echo "DOCKER_CONFIG=${DOCKER_CONFIG}"
-        echo "Installing Docker Scout CLI"
-        curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b $DOCKER_CONFIG
+        install_dir="$DOCKER_CONFIG/cli-plugins"
+        echo "Installing Docker Scout CLI to ${install_dir}"
+        curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
         # Get a CVE report for the built image and fail the pipeline when critical or high CVEs are detected
         docker scout cves --help
         echo "docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium"
