--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -54,11 +54,10 @@ jobs:
         install_dir="$DOCKER_CONFIG/cli-plugins"
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
+        
         # Get a CVE report for the built image and fail the pipeline when critical or high CVEs are detected
-        docker scout cves --help
         echo "docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium"
-        # docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium
-        docker scout cves alpine:3.20 --exit-code --only-severity critical,high,medium
+        docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in image"
           exit 1
