--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -27,6 +27,11 @@ parameters:
   type: string
   default: ''
   displayName: 'Storage account name where the Trivy cache is stored'
+- name: dockerhubRegistryConnection
+  type: string
+  default: ''
+  displayName: 'The Docker Hub registry connection (required for scanning the image with docker scout)'
+
 
 jobs:
 - job: scanDockerImage
@@ -45,8 +50,16 @@ jobs:
   #    script: |
   #      docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
 
+  - task: Docker@2
+    displayName: Login to Docker Hub
+    condition: and(succeeded(), ne('${{ parameters.dockerRegistryConnection }}', ''))
+    inputs:
+      command: login
+      containerRegistry: ${{ parameters.dockerRegistryConnection }}
+  
   - task: CmdLine@2
     displayName: Run docker scout on image
+    condition: and(succeeded(), ne('${{ parameters.dockerhubRegistryConnection }}', ''))
     inputs:
       script: |
         # Install the Docker Scout CLI
