--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -43,20 +43,20 @@ jobs:
     inputs:
       command: login
       containerRegistry: ${{ parameters.dockerRegistryConnection }}
-  #- task: Bash@3
-  #  displayName: 'Pull Docker image from private registry'
-  #  inputs:
-  #    targetType: inline
-  #    script: |
-  #      docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
-
-  - task: Docker@2
-    displayName: Login to Docker Hub
-    condition: and(succeeded(), ne('${{ parameters.dockerRegistryConnection }}', ''))
+  - task: Bash@3
+    displayName: 'Pull Docker image from private registry'
     inputs:
-      command: login
-      containerRegistry: ${{ parameters.dockerRegistryConnection }}
-  
+      targetType: inline
+      script: |
+        docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
+
+  #- task: Docker@2
+  #  displayName: Login to Docker Hub
+  #  condition: and(succeeded(), ne('${{ parameters.dockerhubRegistryConnection }}', ''))
+  #  inputs:
+  #    command: login
+  #    containerRegistry: ${{ parameters.dockerhubRegistryConnection }}
+
   - task: CmdLine@2
     displayName: Run docker scout on image
     condition: and(succeeded(), ne('${{ parameters.dockerhubRegistryConnection }}', ''))
