--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -31,6 +31,10 @@ parameters:
   type: string
   default: ''
   displayName: 'The Docker Hub registry connection (required for scanning the image with docker scout)'
+- name: vulnerabilityExceptionFile
+  type: string
+  default: ''
+  displayName: 'Location to store the VEX file (optional)'
 
 
 jobs:
@@ -68,15 +72,26 @@ jobs:
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
         
-        # Get a CVE report for the built image and fail the pipeline when critical or high CVEs are detected
-        echo "docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium"
-        docker scout cves ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium
-        if [ $? -ne 0 ]; then
-          echo "Vulnerabilities found in image"
-          exit 1
-        else
-          echo "No vulnerabilities found in image"
+        if [ "${{ parameters.vulnerabilityExceptionFile }}" != "" ]; then
+          echo "Generate a VEX file for the image"
+          docker scout vex generate ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --output ${{ parameters.vulnerabilityExceptionFile }}
         fi
+
+        echo "Get a CVE report for the base image"
+        docker scout cves --only-base ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium,low
+        if [ $? -ne 0 ]; then
+          echo "Vulnerabilities found in packages installed in the base image"
+        else
+          echo "No vulnerabilities found in packages installed in the base image"
+        fi
+        echo "Get a CVE report for the built image (without considering CVE from base image) "
+        docker scout cves --ignore-base ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium,low
+        if [ $? -ne 0 ]; then
+          echo "Vulnerabilities found in packages installed in the image"
+        else
+          echo "No vulnerabilities found in packages installed in the image"
+        fi
+
 
   - template: ./scanWithRetryTask.yml
     parameters:
