--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -36,7 +36,7 @@ parameters:
 jobs:
 - job: scanDockerImage
   displayName: Scan Docker image for vulnerabilities
-  variable: 
+  variables: 
     - name: run_docker_scout
       value: $[ ne('${{ parameters.dockerhubRegistryConnection }}', '') ]
   steps:
@@ -72,11 +72,6 @@ jobs:
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
         
-        if [ "${{ parameters.vulnerabilityExceptionFile }}" != "" ]; then
-          echo "Generate a VEX file for the image"
-          docker scout vex generate ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --output ${{ parameters.vulnerabilityExceptionFile }}
-        fi
-
         echo "Get a CVE report for the base image"
         docker scout cves --only-base ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium,low
         if [ $? -ne 0 ]; then
