--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -39,19 +39,23 @@ jobs:
   variables:
     - name: run_docker_scout
       value: $[ ne('${{ parameters.dockerhubRegistryConnection }}', '') ]
+    - name: docker_image_full_name
+      value: ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
   steps:
   - checkout: self
+
   - task: Docker@2
     displayName: Login to ACR
     inputs:
       command: login
       containerRegistry: ${{ parameters.dockerRegistryConnection }}
+
   - task: Bash@3
     displayName: 'Pull Docker image from private registry'
     inputs:
       targetType: inline
       script: |
-        docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
+        docker pull ${{ variables['docker_image_full_name'] }}
 
   - task: Docker@2
     displayName: Login to Docker Hub
@@ -70,25 +74,25 @@ jobs:
         install_dir="$DOCKER_CONFIG/cli-plugins"
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
-        
         echo "Get a CVE report for the base image"
-        docker scout cves --only-base ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium,low
+        docker scout cves --only-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in packages installed in the base image"
         else
           echo "No vulnerabilities found in packages installed in the base image"
         fi
         echo "Get a CVE report for the built image (without considering CVE from base image) "
-        docker scout cves --ignore-base ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} --exit-code --only-severity critical,high,medium,low
+        docker scout cves --ignore-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in packages installed in the image"
         else
           echo "No vulnerabilities found in packages installed in the image"
         fi
+
   - template: ./scanWithRetryTask.yml
     parameters:
       dockerExtraArguments: ""
-      trivyExtraArguments: "image ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}"
+      trivyExtraArguments: "image ${{ variables['docker_image_full_name'] }}"
       trivyIgnoreFile: ${{ parameters.trivyIgnoreFile }}
       displayName: Scan image with Trivy
       trivyCacheAzureSubscription: ${{ parameters.trivyCacheAzureSubscription }}
