Update trivy trigger to use main instead of master

--- a/devops/update-trivy-cache-azure-pipeline.yaml
+++ b/devops/update-trivy-cache-azure-pipeline.yaml
@@ -7,7 +7,7 @@ schedules:
   displayName: 'Daily at 4:00 AM (Mon-Fri)'
   branches:
     include: 
-    - master
+    - main
   always: true
 
 trigger: none
