--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -94,14 +94,14 @@ jobs:
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
         echo "Get a CVE report for the base image"
-        docker scout cves --only-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low
+        docker scout cves --only-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low --vex-location vex.json
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in packages installed in the base image"
         else
           echo "No vulnerabilities found in packages installed in the base image"
         fi
         echo "Get a CVE report for the built image (without considering CVE from base image) "
-        docker scout cves --ignore-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low
+        docker scout cves --ignore-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low --vex-location vex.json
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in packages installed in the image"
         else
