--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -81,7 +81,9 @@ jobs:
         fi
         chmod +x ./trivyignore-to-openvex.sh
         ${{ parameters.trivyIgnoretoOpenVexScript}} ${{ parameters.trivyIgnoreFile }} vex.json "devops@fire.ly" "pkg:${{ parameters.dockerImageRepoName }}@${{ parameters.dockerImageRepoVersion }}"
-        echo "Generated vex.json"  
+        echo "Generated vex.json"
+        pwd
+        cat vex.json  
 
   - task: CmdLine@2
     displayName: Run docker scout on image
@@ -94,6 +96,7 @@ jobs:
         echo "Installing Docker Scout CLI to ${install_dir}"
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- -b ${install_dir}
         echo "Get a CVE report for the base image"
+        pwd
         docker scout cves --only-base ${{ variables['docker_image_full_name'] }} --exit-code --only-severity critical,high,medium,low --vex-location vex.json
         if [ $? -ne 0 ]; then
           echo "Vulnerabilities found in packages installed in the base image"
