--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -46,7 +46,7 @@ jobs:
     - name: docker_image_full_name
       value: ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
     - name: docker_image_package_url
-      value: pkg:${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}@${{ parameters.dockerImageRepoVersion }}
+      value: pkg:docker/${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}@${{ parameters.dockerImageRepoVersion }}
 
   steps:
   - checkout: self
